[gd_scene load_steps=6 format=3 uid="uid://deqmvmu6gg0my"]

[ext_resource type="Script" path="res://UI/life/Life.gd" id="1_wmswi"]
[ext_resource type="Texture2D" uid="uid://du3wjk8y2jamx" path="res://UI/life/Life_1.png" id="2_ncwal"]
[ext_resource type="Texture2D" uid="uid://viqq5eqbpq1v" path="res://UI/life/Life_2.png" id="3_fugbv"]
[ext_resource type="Texture2D" uid="uid://bnj8hyuqg6sv1" path="res://UI/life/Life_3.png" id="4_gilc0"]
[ext_resource type="Texture2D" uid="uid://sdcw0iql4l72" path="res://UI/life/Life_4.png" id="5_biefm"]

[node name="Life" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wmswi")

[node name="Life1" type="Sprite2D" parent="."]
texture = ExtResource("2_ncwal")
centered = false

[node name="Life2" type="Sprite2D" parent="."]
texture = ExtResource("3_fugbv")
centered = false

[node name="Life3" type="Sprite2D" parent="."]
texture = ExtResource("4_gilc0")
centered = false

[node name="Life4" type="Sprite2D" parent="."]
texture = ExtResource("5_biefm")
centered = false
